--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,11 @@
 @font-face {
   font-family: 'SugarpunchDEMO';
-  src: url('SugarpunchDEMO.ttf') format('truetype');
+  src: url('../SugarpunchDEMO.ttf') format('truetype');
 }
 
-html,
+html {
+  background-image: url("../websitebg.png");
+}
 body {
   width: 100%;
   height: 100%;
@@ -12,7 +14,7 @@ body {
 }
 
 .header-image{
-	width: 20%;
+	width: 20em;
 	height: auto;
 }
 
@@ -40,7 +42,7 @@ body {
 
 video.screen,
 video.interstitial {
-  width: 65%;
+  width: 75em;
   z-index: 0;
 }
 
