--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ body {
   width: 100%;
   height: 100%;
   background-size: contain;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .header-image{
@@ -29,11 +29,12 @@ body {
 .header-links{
 	color: black;
 	text-decoration: none;
-	padding-left: 20px;
+  padding-left: 20px;
+  padding-bottom: 25em;
 }
 
 .header-links:hover{
-	color: #ff00ff;
+  color: #ff00ff;
 }
 
 .video-container {
