--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ body {
 	font-size: 200%;
 	width: 100%;
   margin: 0 auto;
-  padding-bottom: 2em;
+  padding-bottom: 1em;
 }
 
 .header-links{
@@ -34,6 +34,18 @@ body {
 
 .header-links:hover{
   color: #ff00ff;
+}
+
+.social-links-container {
+	width: 100%;
+  margin: 0 auto;
+  padding-bottom: 2em;
+}
+
+.social-links{
+  width: 3em;
+  height: auto;
+  padding-right: 20px;
 }
 
 .video-container {
