--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ body {
 .social-links-container {
 	width: 100%;
   margin: 0 auto;
-  padding-bottom: 2em;
+  padding-top: 2em;
 }
 
 .social-links{
