--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,11 @@ body {
   height: 100%;
   background-size: contain;
   overflow: visible;
+  cursor: url('../cursor.ico'), auto;
+}
+
+a, video, img {
+  cursor: url('../cursor2.ico'), auto;
 }
 
 #header-image{
